bug fixes for rule package